MM-51528 Fix new messages line overlapping date lines

--- a/webapp/channels/src/sass/components/_post.scss
+++ b/webapp/channels/src/sass/components/_post.scss
@@ -2179,8 +2179,12 @@
 }
 
 .post-row__padding {
+    &.bottom > div:not(.post) {
+        padding-bottom: 1em;
+    }
+
     &.top > div:not(.post) {
-        padding-top: 0;
+        padding-top: 1em;
     }
 
     &.top .post {
